--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,14 @@
 node_modules
 .env
 
-# Hardhat files
-/cache
-/artifacts
+build/
 
-# TypeChain files
-/typechain
-/typechain-types
+typechain/
+typechain-types/
 
-# solidity-coverage files
-/coverage
-/coverage.json
+coverage/
+coverage.json
 
-# Hardhat Ignition default folder for deployments against a local node
 ignition/deployments/chain-31337
 
 .DS_Store
