--- a/extensions/wallet/manifest.json
+++ b/extensions/wallet/manifest.json
@@ -10,6 +10,6 @@
   "browser_action": {
     "default_icon": "icons/icon128.png",
     "default_title": "Wallet",
-    "default_popup": "index.html"
+    "default_popup": "popup/index.html"
   }
 }
