--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "start:site": "node site/main.js",
     "start:chain": "hardhat node",
     "compile": "hardhat compile",
-    "deploy": "hardhat ignition deploy ignition/modules/Ticket.js --network localhost",
+    "deploy": "hardhat run deploy/deploy.js --network localhost",
     "test": "hardhat test",
     "test:gas": "REPORT_GAS=true hardhat test"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-ignition": "^0.15.1",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.1",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "hardhat": "^2.22.3"
   }
