--- a/extensions/wallet/manifest.json
+++ b/extensions/wallet/manifest.json
@@ -10,7 +10,9 @@
   "content_scripts": [
     {
       "matches": ["*://localhost/*"],
-      "js": ["scripts/wallet.js"]
+      "js": ["scripts/wallet.js"],
+      "all_frames": true,
+      "run_at": "document_end"
     }
   ],
   "browser_action": {
