--- a/package.json
+++ b/package.json
@@ -6,21 +6,27 @@
   "license": "MIT",
   "main": "site/main.js",
   "scripts": {
-    "start:site": "node site/main.js",
+    "start:app": "vite",
     "start:chain": "hardhat node",
+    "build": "vite build",
     "compile": "hardhat compile",
     "deploy": "hardhat run deploy/deploy.js --network localhost",
     "test": "hardhat test",
     "test:gas": "REPORT_GAS=true hardhat test"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "ejs": "^3.1.10",
-    "express": "^4.19.2"
+    "ethers": "^6.12.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.1",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.22.3"
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "hardhat": "^2.22.3",
+    "vite": "^5.2.10"
   }
 }
