--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:gas": "REPORT_GAS=true hardhat test"
   },
   "dependencies": {
+    "@primer/octicons": "^19.9.0",
     "ethers": "^6.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
