--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ticket-commander",
+  "name": "ticket-links",
   "version": "0.5.0",
   "description": "A blockchain-based ticket sales platform.",
   "author": "",
