--- a/extensions/wallet/manifest.json
+++ b/extensions/wallet/manifest.json
@@ -2,11 +2,11 @@
   "manifest_version": 3,
   "name": "Wallet",
   "version": "0.5.0",
-  "description": "Represents a blockchain wallet in your browser.",
+  "description": "Provides blockchain credentials applications in the browser.",
   "icons": {
     "128": "icons/icon128.png"
   },
-  "permissions": ["activeTab", "webRequest", "storage"],
+  "permissions": ["storage"],
   "action": {
     "default_icon": "icons/icon128.png",
     "default_title": "Wallet",
