--- a/extensions/wallet/manifest.json
+++ b/extensions/wallet/manifest.json
@@ -15,7 +15,7 @@
   "content_scripts": [
     {
       "matches": ["*://localhost/*"],
-      "js": ["lib/storage.js", "scripts/wallet.js"],
+      "js": ["lib/storage.js", "lib/message.js", "scripts/wallet.js"],
       "run_at": "document_start"
     }
   ]
