--- a/extensions/wallet/manifest.json
+++ b/extensions/wallet/manifest.json
@@ -6,7 +6,9 @@
   "icons": {
     "128": "icons/icon128.png"
   },
-  "permissions": ["storage"],
+  "permissions": [
+    "storage"
+  ],
   "action": {
     "default_icon": "icons/icon128.png",
     "default_title": "Wallet",
@@ -14,8 +16,14 @@
   },
   "content_scripts": [
     {
-      "matches": ["*://localhost/*"],
-      "js": ["lib/storage.js", "lib/message.js", "scripts/wallet.js"],
+      "matches": [
+        "*://localhost/*"
+      ],
+      "js": [
+        "lib/storage.js",
+        "lib/message.js",
+        "scripts/wallet.js"
+      ],
       "run_at": "document_start"
     }
   ]
